(*modals): not-centered on mobile, margins fixed

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -68,13 +68,6 @@
     border-color .15s ease-in-out,  !important;
 }
 
-.nav-on-top {
-  z-index: 1300
-}
-
-.b-toaster {
-  z-index: 1500
-}
 
 .form-group {
 
